# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push.yml
brain_games/: brain_even.py  cli.py  engine.py  helpers.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
